# Bot-Discord

./: .gitignore  CMakeLists.txt
src/: main.cpp  request.cpp
src/include/: request.h
